Wed Mar 26 01:04:30 GMT 2003  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fixed sort_bands == 1 bug which would
	  incorrectly reject many documents with a low score.

Thu Mar 06 13:04:06 GMT 2003  Sam Liddicott <sam.liddicott@orange.co.uk>

	* Add writeup about document collapsing to matcherdesign.html

Thu Mar 06 11:32:05 GMT 2003  Sam Liddicott <sam.liddicott@orange.co.uk>

	* Add collapse_count threshold checking to ensure that most
	  relevant collapsed-away hit is more relevant than threshold
	  (if specified)

Mon Mar 03 14:04:56 GMT 2003  Olly Betts <olly@survex.com>

	* docs/quartzdesign.html: Corrected 2kB to 2KB.

Fri Feb 28 10:11:04 GMT 2003  Sam Liddicott <sam.liddicott@orange.co.uk>

	* Add get_collapse_count() to OmMSetIterator
	* Add collapse_count to OmMSetItem
	* Add collapse_count tracking to get_mset()

Thu Feb 27 15:28:08 GMT 2003  Olly Betts <olly@survex.com>

	* common/match.h,common/multimatch.h,matcher/multimatch.cc: Optimise
	  the common sort_bands == 1 case better.
	* tests/api_db.cc: sortbands2 now tests 1 sortband as well as 10.

Wed Feb 26 09:58:01 GMT 2003  Sam Liddicott <sam.liddicott@orange.co.uk>

	* Fix success message in bootstrap when building in non-src dir
	  as configure is written to the src dir

Mon Feb 24 10:33:52 GMT 2003  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Disabled (for now) sort_bands
	  optimisation which is misbehaving.  Fixed forward ordered boolean
	  optimisation broken by last check-in. 
	* tests/api_db.cc: Added test_sortbands2 based on James' test code.

Sun Feb 23 20:28:47 GMT 2003  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: Fixed problem with sort_bands when asking
	  for an m-set which didn't start with the first match.

Sun Jan 05 22:20:33 GMT 2003  Olly Betts <olly@survex.com>

	* testsuite/index_utils.cc: Handling of ^x was just downright wrong
	  due to a typo.

Sun Jan 05 22:19:56 GMT 2003  Olly Betts <olly@survex.com>
